1.1.0.dev0 (Next Release)
-------------------------

1.0.0 (2016-10-02)
------------------

- Support for Python 2.5 has been dropped.  On Python 2, Superlance
  now requires Python 2.6 or later.

- Support for Python 3 has been added.  On Python 3, Superlance
  requires Python 3.2 or later.

- Fixed parsing of ``-n`` and ``--name`` options in ``httpok``.  Patch
  by DenisBY.

0.14 (2016-09-24)
-----------------

- Fixed docs build.

0.13 (2016-09-05)
-----------------

- ``httpok`` now allows multiple expected status codes to be specified.  Patch
  by valmiRe.

- ``httpok`` now has a ``--name`` option like ``memmon``.

- All commands now return exit status 0 from ``--help``.

0.12 (2016-09-03)
-----------------

- Fixed ``crashmail`` parsing of ``--optionalheader``.  Patch by Matt Dziuban.

0.11 (2014-08-15)
-----------------

- Added support for ``memmon`` to check against cumulative RSS of a process
  and all its child processes.  Patch by Lukas Graf.

- Fixed a bug introduced in 0.9 where the ``-u`` and ``-n`` options in
  ``memmon`` were parsed incorrectly.  Patch by Harald Friessnegger.

0.10 (2014-07-08)
-----------------

- Honor timeout in httok checks even on trying the connection.
  Without it, processes that take make than 60 seconds to accept connections
  and http_ok with TICK_60 events cause a permanent restart of the process.

- ``httpok`` now sends a ``User-Agent`` header of ``httpok``.

- Removed ``setuptools`` from the ``requires`` list in ``setup.py`` because
  it caused installation issues on some systems.

0.9 (2013-09-18)
----------------

- Added license.

- Fixed bug in cmd line option validator for ProcessStateEmailMonitor
  Bug report by Val Jordan

- Added ``-u`` option to memmon the only send an email in case the restarted
  process' uptime (in seconds) is below this limit.  This is useful to only
  get notified if a processes gets restarted too frequently.
  Patch by Harald Friessnegger.

0.8 (2013-05-26)
----------------
